fixed signature on small size

--- a/css/main.css
+++ b/css/main.css
@@ -175,4 +175,8 @@ ul.nav a:hover {
     .main h4 {
         font-size: 1em;
     }
+    #signature {
+        height: 50px;
+        width: 175px;
+    }
 }
